--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
-        ddl-auto: update
+        ddl-auto: validate
   liquibase:
     change-log: classpath:db/changelog/db.master.xml
     enabled: true
